Add main API Route - POST /api/interactions
This route is where discord client will send requests in the form of interaction: APIInteraction

index.ts (entry point)
-> app.ts (express instance)
 -> mainRoute (main route handler)
  -> interactionRoute (interactions handler POST /api/interactions
   -> interactionsController (business logic)

Embed.ts - contains embed templates InteractionResponses that will be sent to discord client

New npm script
"npm run dev": starts bot online and server with concurrently

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.ts",
   "type": "module",
   "scripts": {
+    "dev": "concurrently \"nodemon --exec tsx index.ts\" \"npx tsx src/bot/bot.ts\"",
     "register-commands": "npx tsx src/commands/commands.ts"
   },
   "repository": {
